--- a/src/test/resources/fixtures/pnpx/build.gradle
+++ b/src/test/resources/fixtures/pnpx/build.gradle
@@ -1,3 +1,5 @@
+import org.gradle.util.GradleVersion
+
 plugins {
     id "com.github.node-gradle.node"
 }
@@ -57,7 +59,9 @@ if (isPropertyEnabled("changeInputs")) {
     test.command = "_mocha"
 }
 
-def isPropertyEnabled(name) {
-    def property = System.properties[name]
-    return property == "true"
+def isPropertyEnabled(String name) {
+    if (GradleVersion.current() >= GradleVersion.version("6.6")) {
+        return providers.systemProperty(name).forUseAtConfigurationTime().isPresent()
+    }
+    return System.properties[name] != null
 }
