Update tests to match current npm output

--- a/src/test/resources/fixtures/node-system-version/build.gradle
+++ b/src/test/resources/fixtures/node-system-version/build.gradle
@@ -13,9 +13,8 @@ task countRepositories {
     }
 }
 
-task npmHelp(type: NpmTask) {
-    npmCommand = ["--help"]
-    ignoreExitValue = true
+task npmVersion(type: NpmTask) {
+    npmCommand = ["version"]
 }
 
 task npxHelp(type: NpxTask) {
