--- a/.github/workflows/build-examples.yml
+++ b/.github/workflows/build-examples.yml
@@ -1,5 +1,5 @@
 name: Build Examples
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 jobs:
   examples:
     runs-on: ubuntu-latest
