--- a/.github/workflows/build-examples.yml
+++ b/.github/workflows/build-examples.yml
@@ -10,6 +10,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build Node.js Scripts Project
