--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
@@ -23,6 +27,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
@@ -36,6 +44,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 8
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
