--- a/.github/workflows/build-examples.yml
+++ b/.github/workflows/build-examples.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+      - name: Install yarn
+        run: npm install -g yarn@1.22.17
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build Node.js Scripts Project
