--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+      - name: Install yarn
+        run: npm install -g yarn@1.22.17
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
@@ -50,6 +52,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
+      - name: Install yarn
+        run: npm install -g yarn@1.22.17
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
