Enable proxy tests again, they should work

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,9 @@ jobs:
     strategy:
       matrix:
         config:
-          - {os: ubuntu-latest, params: "-PtestAllSupportedGradleVersions=true -PtestProxyIntegrationTests=false" }
-          - {os: windows-latest, params: "-PtestProxyIntegrationTests=false" }
-          - {os: macos-latest, params: "-PtestProxyIntegrationTests=false" }
+          - {os: ubuntu-latest, params: "-PtestAllSupportedGradleVersions=true" }
+          - {os: windows-latest, params: "" }
+          - {os: macos-latest, params: "" }
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v2
