Upgrade default Node to 16.14.2 and npm to 8.5.0 #226

--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -21,7 +21,7 @@ task env(type: NpxTask) {
 task pwd(type: NpxTask) {
     dependsOn npmInstall
     command = "jseval"
-    args = ["console.log(`workingDirectory='\${process.cwd()}'`);"]
+    args = ["""console.log(["workingDirectory='", process.cwd(), "'"].join(''));"""]
     outputs.upToDateWhen {
         true
     }
