--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -21,7 +21,7 @@ task env(type: NpxTask) {
 task pwd(type: NpxTask) {
     dependsOn npmInstall
     command = "jseval"
-    args = ["""console.log(["workingDirectory='", process.cwd(), "'"].join(''));"""]
+    args = ["console.log(`workingDirectory='\${process.cwd()}'`);"]
     outputs.upToDateWhen {
         true
     }
