--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,13 +12,14 @@ jobs:
           - {os: macos-latest, params: "build pnpmTests" }
     steps:
       - name: Checkout Source Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 11
       - name: Install Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 16
       - name: Install yarn
