--- a/.github/workflows/update-javadoc.yml
+++ b/.github/workflows/update-javadoc.yml
@@ -8,10 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source Code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Install Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: 8
       - name: Build Javadoc
         run: ./gradlew --no-configuration-cache dokkaJavadoc
