Fix Gradle 8.0 tests

--- a/src/test/resources/fixtures/node-system-version/build.gradle
+++ b/src/test/resources/fixtures/node-system-version/build.gradle
@@ -7,9 +7,10 @@ task hello(type: NodeTask) {
 }
 
 task countRepositories {
+    def size = repositories.size()
     dependsOn nodeSetup
     doLast {
-        println "Project repositories: ${repositories.size()}"
+        println "Project repositories: ${size}"
     }
 }
 
