--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -45,9 +45,11 @@ if (ignoreExitValue) {
     env.ignoreExitValue = true
 }
 
-if (outputFile) {
+if (isPropertyEnabled("outputFile")) {
+    def out = project.objects.fileProperty()
+    out.set(project.file("${buildDir}/standard-output.txt"))
     env.execOverrides {
-        standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
+        standardOutput = new FileOutputStream(out.get().asFile)
     }
 }
 
