--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,8 @@ jobs:
           node-version: 16
       - name: Install yarn
         run: npm install -g yarn@1.22.17
+      - name: Install pnpm
+        run: npm install -g pnpm@4.12.1
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
