Split windows-incompatible test into two

--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -63,8 +63,9 @@ if (isPropertyEnabled("customWorkingDir")) {
 }
 
 if (isPropertyEnabled("outputFile")) {
+    def standardOutputFile = new File(buildDir, "standard-output.txt")
     env.execOverrides {
-        standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
+        standardOutput = new FileOutputStream(standardOutputFile)
     }
 }
 
