--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -70,5 +70,10 @@ if (isPropertyEnabled("outputFile")) {
 }
 
 def isPropertyEnabled(String name) {
-    return providers.systemProperty(name).forUseAtConfigurationTime().isPresent()
+    def provider = providers.systemProperty(name)
+    if (org.gradle.util.GradleVersion.current() >= org.gradle.util.GradleVersion.version("7.4")) {
+        return provider.isPresent()
+    } else {
+        return provider.forUseAtConfigurationTime().isPresent()
+    }
 }
