--- a/src/test/resources/fixtures/npx/build.gradle
+++ b/src/test/resources/fixtures/npx/build.gradle
@@ -60,5 +60,10 @@ if (isPropertyEnabled("changeInputs")) {
 }
 
 def isPropertyEnabled(String name) {
-    return providers.systemProperty(name).forUseAtConfigurationTime().isPresent()
+    def provider = providers.systemProperty(name)
+    if (org.gradle.util.GradleVersion.current() >= org.gradle.util.GradleVersion.version("7.4")) {
+        return provider.isPresent()
+    } else {
+        return provider.forUseAtConfigurationTime().isPresent()
+    }
 }
