--- a/src/test/resources/fixtures/pnpm/build.gradle
+++ b/src/test/resources/fixtures/pnpm/build.gradle
@@ -30,5 +30,10 @@ task version(type: PnpmTask) {
 }
 
 def isPropertyEnabled(String name) {
-    return providers.systemProperty(name).forUseAtConfigurationTime().isPresent()
+    def provider = providers.systemProperty(name)
+    if (org.gradle.util.GradleVersion.current() >= org.gradle.util.GradleVersion.version("7.4")) {
+        return provider.isPresent()
+    } else {
+        return provider.forUseAtConfigurationTime().isPresent()
+    }
 }
