Only use predictive test selection on pull requests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,6 @@ jobs:
         with:
           cache-read-only: ${{ github.event_name == 'pull_request' }}
       - name: Build
-        run: ./gradlew --scan "-Pcom.github.gradle.node.predictivetestselection=true" ${{ matrix.config.params }}
+        run: ./gradlew --scan "-Pcom.github.gradle.node.predictivetestselection=${{ github.event_name == 'pull_request' }}" ${{ matrix.config.params }}
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
