Bun initial cleanup #291

--- a/src/test/resources/fixtures/bun-in-subdirectory/build.gradle
+++ b/src/test/resources/fixtures/bun-in-subdirectory/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
 node {
     nodeProjectDir = file("${projectDir}/javascript-project")
+    download = true
+    bunVersion = "1.0.3"
 }
 
 task buildBunx(type: BunxTask) {
