--- a/src/test/resources/fixtures/bunx-env/build.gradle
+++ b/src/test/resources/fixtures/bunx-env/build.gradle
@@ -4,6 +4,8 @@ plugins {
 
 node {
     workDir = file("build/node")
+    download = true
+    bunVersion = "1.0.3"
 }
 
 task env(type: BunxTask) {
