--- a/examples/simple-node/npm/build.gradle
+++ b/examples/simple-node/npm/build.gradle
@@ -1,7 +1,16 @@
 apply plugin: 'com.github.node-gradle.node'
 
 node {
-    download = false
+    download = true
+
+    custom {
+        npm {
+            version.set("9.6.4")
+        }
+        yarn {
+            version.set("1.22.4")
+        }
+    }
 }
 
 task helloWorld(type: NodeTask, dependsOn: 'npmInstall') {
