--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 systemProp.gradle.enterprise.testretry.enabled=false
 systemProp.org.gradle.unsafe.kotlin.assignment=true
