--- a/src/test/resources/fixtures/bun-in-subdirectory/build.gradle
+++ b/src/test/resources/fixtures/bun-in-subdirectory/build.gradle
@@ -5,7 +5,7 @@ plugins {
 node {
     nodeProjectDir = file("${projectDir}/javascript-project")
     download = true
-    bunVersion = "1.0.3"
+    bunVersion = '1.3.8'
 }
 
 task buildBunx(type: BunxTask) {
