--- a/src/test/resources/fixtures/bun/build.gradle
+++ b/src/test/resources/fixtures/bun/build.gradle
@@ -5,7 +5,7 @@ plugins {
 def changeInputs = isPropertyEnabled("changeInputs")
 
 node {
-    bunVersion = "1.0.3"
+    bunVersion = '1.3.8'
     download = true
     workDir = file('build/node')
 }
