--- a/src/test/resources/fixtures/bunx-env/build.gradle
+++ b/src/test/resources/fixtures/bunx-env/build.gradle
@@ -5,7 +5,7 @@ plugins {
 node {
     workDir = file("build/node")
     download = true
-    bunVersion = "1.0.3"
+    bunVersion = '1.3.8'
 }
 
 task env(type: BunxTask) {
